Downgrade Java toolchain from 21 to 17
Aligns with Spring Boot and broader Java ecosystem targeting.
Only one Java 21 API usage existed (SequencedCollection.getLast),
replaced with standard List.get.